--- a/app/assets/stylesheets/common/components/buttons.scss
+++ b/app/assets/stylesheets/common/components/buttons.scss
@@ -18,8 +18,6 @@
   align-items: center;
   justify-content: center;
   margin: 0;
-  padding-left: 0.8em;
-  padding-right: 0.8em;
   font-weight: normal;
   color: $text-color;
   background: $bg-color;
@@ -56,6 +54,7 @@
   &:active,
   &.btn-active {
     @include linear-gradient($hover-bg-color 0%, $bg-color 100%);
+    border-bottom-color: $bg-color;
   }
   &[disabled],
   &.disabled {
@@ -250,20 +249,14 @@
 // Small
 
 .btn-small {
-  padding: 6px;
-  font-size: $font-down-1;
+  font-size: var(--font-down-1);
   min-height: 20px;
-  .d-icon {
-    max-height: 0.87em;
-  }
 }
 
 // Large
 
 .btn-large {
-  padding: 9px 18px;
-  font-size: $font-up-1;
-  line-height: $line-height-small;
+  font-size: var(--font-up-1);
 }
 
 // Bonus Buttons
@@ -284,9 +277,8 @@
   }
   &.close {
     padding: 0;
-    min-height: unset;
     background: transparent;
-    font-size: $font-up-3;
+    font-size: var(--font-up-3);
     .d-icon {
       color: var(--primary-high);
     }
