--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -527,15 +527,18 @@ $mobile-breakpoint: 700px;
     padding: 10px;
     display: flex;
     align-items: center;
+    .inline-form {
+      // Hacky, but fixes email preview summary
+      margin-bottom: -0.5em;
+      > div {
+        margin-right: 0.5em;
+      }
+    }
+
     @include breakpoint(mobile-extra-large) {
       margin: 0 -10px;
     }
-    label {
-      margin-bottom: 0;
-    }
     input {
-      margin-right: 5px;
-      margin-bottom: 0;
       @include breakpoint(tablet) {
         max-width: 150px;
       }
