Date/time inputs cleanup
This is incomplete, browsers are inconsistent in date/time input heights.
Safari/Chrome add some padding (to different degrees), Firefox doesn't.

--- a/plugins/styleguide/assets/javascripts/discourse/templates/styleguide/atoms/date-time-inputs.hbs
+++ b/plugins/styleguide/assets/javascripts/discourse/templates/styleguide/atoms/date-time-inputs.hbs
@@ -13,3 +13,17 @@
 {{#styleguide-example title="date-time-input-range"}}
   {{date-time-input-range}}
 {{/styleguide-example}}
+
+{{#styleguide-example title="future-date-input"}}
+  {{future-date-input
+    displayLabelIcon="far-clock"
+    includeDateTime=true
+    includeMidFuture=true
+    clearable=true
+  }}
+{{/styleguide-example}}
+
+{{#styleguide-example title="date-picker"}}
+  {{date-picker defaultDate="YYYY-MM-DD"}}
+{{/styleguide-example}}
+
