Some normalization for date/time inputs

--- a/plugins/styleguide/assets/javascripts/discourse/templates/styleguide/atoms/date-time-inputs.hbs
+++ b/plugins/styleguide/assets/javascripts/discourse/templates/styleguide/atoms/date-time-inputs.hbs
@@ -7,11 +7,15 @@
 {{/styleguide-example}}
 
 {{#styleguide-example title="date-time-input"}}
-  {{date-time-input}}
+  {{date-time-input clearable=true}}
 {{/styleguide-example}}
 
 {{#styleguide-example title="date-time-input-range"}}
   {{date-time-input-range}}
+{{/styleguide-example}}
+
+{{#styleguide-example title="date-time-input-range"}}
+  {{date-time-input-range showFromTime=false showToTime=false}}
 {{/styleguide-example}}
 
 {{#styleguide-example title="future-date-input"}}
