--- a/app/assets/stylesheets/common/select-kit/future-date-input-selector.scss
+++ b/app/assets/stylesheets/common/select-kit/future-date-input-selector.scss
@@ -36,3 +36,14 @@
     }
   }
 }
+
+.future-date-input {
+  .future-date-input-date-picker,
+  .future-date-input-time-picker {
+    margin-top: 0.5em;
+    margin-bottom: 0;
+    input {
+      margin-bottom: 0;
+    }
+  }
+}
