WIP: expand through query params, hide tags checkbox when not useful, remove some floating classes

--- a/app/assets/javascripts/discourse/app/templates/full-page-search.hbs
+++ b/app/assets/javascripts/discourse/app/templates/full-page-search.hbs
@@ -38,6 +38,7 @@
       {{search-advanced-options
         searchTerm=(readonly searchTerm)
         onChangeSearchTerm=(action (mut searchTerm))
+        expandFilters=expandFilters
       }}
     </div>
   {{/if}}
