--- a/app/assets/javascripts/discourse/app/templates/components/search-advanced-options.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/search-advanced-options.hbs
@@ -6,7 +6,7 @@
     {{plugin-outlet name="advanced-search-options-above" args=(hash searchedTerms=searchedTerms onChangeSearchedTermField=onChangeSearchedTermField) tagName=""}}
 
     <div class="container advanced-search-posted-by-group">
-      <div class="control-group pull-left">
+      <div class="control-group">
         <label class="control-label" for="search-posted-by">
           {{i18n "search.advanced.posted_by.label"}}
         </label>
@@ -22,7 +22,7 @@
           }}
         </div>
       </div>
-      <div class="control-group pull-left">
+      <div class="control-group">
         <label class="control-label" for="search-in-category">{{i18n "search.advanced.in_category.label"}}</label>
         <div class="controls">
           {{search-advanced-category-chooser
@@ -47,24 +47,26 @@
               unlimitedTagCount=true
               onChange=(action "onChangeSearchTermForTags")
             }}
-            <section class="field">
-              <label>
-                {{input
-                  type="checkbox"
-                  class="all-tags"
-                  checked=searchedTerms.special.all_tags
-                  click=(action "onChangeSearchTermForAllTags" value="target.checked")
-                }}
-                {{i18n "search.advanced.filters.all_tags"}}
-              </label>
-            </section>
+            {{#if showAllTagsCheckbox}}
+              <section class="field">
+                <label>
+                  {{input
+                    type="checkbox"
+                    class="all-tags"
+                    checked=searchedTerms.special.all_tags
+                    click=(action "onChangeSearchTermForAllTags" value="target.checked")
+                  }}
+                  {{i18n "search.advanced.filters.all_tags"}}
+                </label>
+              </section>
+            {{/if}}
           </div>
         </div>
       </div>
     {{/if}}
 
     <div class="container advanced-search-topics-posts-group">
-      <div class="control-group pull-left">
+      <div class="control-group">
         <div class="controls">
           <fieldset class="grouped-control">
             <legend class="grouped-control-label" for="search-in-options">{{i18n "search.advanced.filters.label"}}</legend>
@@ -116,6 +118,7 @@
                 <label for="matching-seen">{{i18n "search.advanced.filters.seen"}}</label>
               </div>
             {{/if}}
+
             {{combo-box
               id="in"
               valueProperty="value"
@@ -130,7 +133,7 @@
           </fieldset>
         </div>
       </div>
-      <div class="control-group pull-left">
+      <div class="control-group">
         <label class="control-label" for="search-status-options">{{i18n "search.advanced.statuses.label"}}</label>
         <div class="controls">
           {{combo-box
@@ -167,9 +170,9 @@
         </div>
       </div>
 
-      <div class="count-group control-group clearfix">
+      <div class="count-group control-group">
         <label class="control-label" for="search-min-post-count">{{i18n "search.advanced.post.count.label"}}</label>
-        <div class="count pull-left">
+        <div class="count">
           <div class="controls">
             {{input
               type="number"
@@ -196,9 +199,9 @@
         </div>
       </div>
 
-      <div class="count-group control-group clearfix">
+      <div class="count-group control-group">
         <label class="control-label" for="search-min-views">{{i18n "search.advanced.views.label"}}</label>
-        <div class="count pull-left">
+        <div class="count">
           <div class="controls">
             {{input
               type="number"
