More WIP for full search page

--- a/app/assets/javascripts/discourse/app/templates/full-page-search.hbs
+++ b/app/assets/javascripts/discourse/app/templates/full-page-search.hbs
@@ -1,48 +1,58 @@
 {{#d-section pageClass="search" class="search-container"}}
   {{scroll-tracker name="full-page-search" tag=searchTerm class="hidden"}}
-  <h1 class="search-page-heading">
-    {{#if hasResults}}
-      <div class="result-count" id="search-result-count" aria-live="polite">
-        {{html-safe resultCountLabel}}
-      </div>
-    {{else}}
-      Search
-    {{/if}}
-  </h1>
-  <div class="search-bar">
-    {{search-text-field
-      value=searchTerm
-      class="full-page-search search no-blur search-query"
-      aria-label=(i18n "search.full_page_title")
-      enter=(action "search")
-      hasAutofocus=hasAutofocus
-      aria-controls="search-result-count"
-    }}
-    {{combo-box
-      value=searchType
-      content=searchTypes
-      castInteger=true
-      onChange=(action (mut searchType))
-    }}
-    {{d-button
-      action=(action "search")
-      icon="search"
-      label="search.search_button"
-      class="btn-primary search-cta"
-      ariaLabel="search.search_button"
-      disabled=searchButtonDisabled
-    }}
-  </div>
-  {{#if usingDefaultSearchType}}
-    <div class="search-filters">
-      {{search-advanced-options
-        searchTerm=(readonly searchTerm)
-        onChangeSearchTerm=(action (mut searchTerm))
-        expandFilters=expandFilters
+  <div class="search-header">
+    <h1 class="search-page-heading">
+      {{#if hasResults}}
+        <div class="result-count" id="search-result-count" aria-live="polite">
+          {{html-safe resultCountLabel}}
+        </div>
+      {{else}}
+        {{i18n "search.full_page_title"}}
+      {{/if}}
+    </h1>
+    <div class="search-bar">
+      {{search-text-field
+        value=searchTerm
+        class="full-page-search search no-blur search-query"
+        aria-label=(i18n "search.search_term_label")
+        enter=(action "search")
+        hasAutofocus=hasAutofocus
+        aria-controls="search-result-count"
+      }}
+      {{combo-box
+        value=search_type
+        content=searchTypes
+        castInteger=true
+        onChange=(action (mut search_type))
+      }}
+      {{d-button
+        action=(action "search")
+        icon="search"
+        label="search.search_button"
+        class="btn-primary search-cta"
+        ariaLabel="search.search_button"
+        disabled=searchButtonDisabled
       }}
     </div>
-  {{/if}}
-  <div class="search-advanced">
+    {{#if usingDefaultSearchType}}
+      {{!-- context is only provided when searching from mobile view --}}
+      {{#if context}}
+        <div class="search-context">
+          <label>
+            {{input type="checkbox" name="searchContext" checked=searchContextEnabled}} {{searchContextDescription}}
+          </label>
+        </div>
+      {{/if}}
+
+      <div class="search-filters">
+        {{search-advanced-options
+          searchTerm=(readonly searchTerm)
+          onChangeSearchTerm=(action (mut searchTerm))
+          expandFilters=expandFilters
+        }}
+      </div>
+    {{/if}}
+
     <div class="search-notice">
       {{#if invalidSearch}}
         <div class="fps-invalid">
@@ -51,40 +61,32 @@
       {{/if}}
     </div>
 
-    {{!-- context is only provided when searching from mobile view --}}
-    <div class="search-context">
-      {{#if context}}
-        <div class="fps-search-context">
-          <label>
-            {{input type="checkbox" name="searchContext" checked=searchContextEnabled}} {{searchContextDescription}}
-          </label>
-        </div>
-      {{/if}}
-    </div>
+  </div>
 
+  <div class="search-advanced">
     {{#if hasResults}}
       {{#if usingDefaultSearchType}}
-        <div class="search-info">
+        <div class={{searchInfoClassNames}}>
           {{#if canBulkSelect}}
             {{d-button icon="list" class="btn-default bulk-select" title="topics.bulk.toggle" action=(action "toggleBulkSelect")}}
             {{bulk-select-button selected=selected category=category action=(action "search")}}
           {{/if}}
 
           {{#if bulkSelectEnabled}}
-            <div class="fps-select">
-              {{d-button icon="check-square" class="btn-default" action=(action "selectAll") label="search.select_all"~}}
-              {{d-button icon="far-square" class="btn-default" action=(action "clearAll") label="search.clear_all"}}
-            </div>
+            {{d-button icon="check-square" class="btn-default" action=(action "selectAll") label="search.select_all"~}}
+            {{d-button icon="far-square" class="btn-default" action=(action "clearAll") label="search.clear_all"}}
           {{/if}}
-          <div class="sort-by">
-            <span class="desc">
+
+          <div class="sort-by inline-form">
+            <label for="search-sort-by">
               {{i18n "search.sort_by"}}
-            </span>
+            </label>
             {{combo-box
               value=sortOrder
               content=sortOrders
               castInteger=true
               onChange=(action (mut sortOrder))
+              id="search-sort-by"
             }}
           </div>
         </div>
@@ -145,24 +147,55 @@
               {{/if}}
             {{/conditional-loading-spinner}}
           {{else}}
-            {{#if model.categories}}
-              {{#each model.categories as |category|}}
-                <div class="category-item">
-                  {{category-link category}}
-                </div>
-              {{/each}}
-            {{/if}}
+            {{#conditional-loading-spinner condition=loading }}
+              {{#unless hasResults}}
+                <h3>{{i18n "search.no_results"}}</h3>
+              {{/unless}}
 
-            {{#if model.users}}
-              {{#each model.users as |user|}}
-                {{#user-link user=user}}
-                  <div class="user-item">
-                    {{avatar user imageSize="large"}}
-                    {{user.username}}
+              {{#if hasResults}}
+                {{#if model.categories.length}}
+                  <h4 class="category-heading">
+                    Categories
+                  </h4>
+                  <div class="category-items">
+                    {{#each model.categories as |category|}}
+                      {{category-link category}}
+                    {{/each}}
                   </div>
-                {{/user-link}}
-              {{/each}}
-            {{/if}}
+                {{/if}}
+
+                {{#if model.tags.length}}
+                  <h4 class="tag-heading">
+                    Tags
+                  </h4>
+                  <div class="tag-items">
+                    {{#each model.tags as |tag|}}
+                      <a href={{tag.url}}>
+                        {{tag.id}}
+                      </a>
+                    {{/each}}
+                  </div>
+                {{/if}}
+
+                {{#if model.users}}
+                  {{#each model.users as |user|}}
+                    {{#user-link user=user class="user-item"}}
+                      {{avatar user imageSize="large"}}
+                      <div class="user-titles">
+                        {{#if user.name}}
+                          <span class="name">
+                            {{user.name}}
+                          </span>
+                        {{/if}}
+                        <span class="username">
+                          {{user.username}}
+                        </span>
+                      </div>
+                    {{/user-link}}
+                  {{/each}}
+                {{/if}}
+              {{/if}}
+            {{/conditional-loading-spinner}}
           {{/if}}
         {{/load-more}}
       </div>
