--- a/app/assets/stylesheets/mobile/admin_customize.scss
+++ b/app/assets/stylesheets/mobile/admin_customize.scss
@@ -35,10 +35,7 @@ body .admin-customize {
       display: none;
     }
 
-    .controls {
-      width: 100%;
-    }
-
+    .controls,
     .admin-controls {
       width: 100%;
     }
