--- a/app/assets/stylesheets/common/base/search.scss
+++ b/app/assets/stylesheets/common/base/search.scss
@@ -332,8 +332,8 @@
 // temporary
 
 .search-results {
-  .user-item {
-    margin-bottom: 2em;
+  .fps-user-item {
+    margin-bottom: 1.5em;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -361,6 +361,11 @@
 
   .category-items,
   .tag-items {
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
+    .fps-category-item,
+    .fps-tag-item {
+      margin-bottom: 1.5em;
+      display: block;
+    }
   }
 }
