UX: Better placement for bulk select actions button

--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -173,6 +173,13 @@
   width: 100%;
   border-collapse: collapse;
 
+  thead {
+    @include sticky;
+    top: 60px;
+    background: var(--secondary);
+    z-index: 2;
+  }
+
   > tbody > tr {
     &.has-excerpt .star {
       vertical-align: top;
