--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -221,10 +221,8 @@
     text-align: left;
     vertical-align: middle;
   }
-  th {
-    button .d-icon {
-      color: var(--primary-medium);
-    }
+  th .btn-flat .d-icon {
+    color: currentColor;
   }
   td {
     color: var(--primary-medium);
