--- a/app/assets/javascripts/admin/addon/templates/components/site-settings/upload.hbs
+++ b/app/assets/javascripts/admin/addon/templates/components/site-settings/upload.hbs
@@ -1,7 +1,7 @@
 {{uppy-image-uploader
   imageUrl=value
   placeholderUrl=setting.placeholder
-  queryParams=(hash for_site_setting=true)
+  additionalParams=(hash for_site_setting=true)
   type="site_setting"
   id=(concat "site-setting-image-uploader-" setting.setting)
 }}
