--- a/app/assets/javascripts/discourse/app/templates/preferences/profile.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/profile.hbs
@@ -103,6 +103,19 @@
   </div>
 {{/if}}
 
+{{#if canChangeDefaultCalendar }}
+  <div class="control-group">
+    <label class="control-label">{{i18n "download_calendar.default_calendar"}}</label>
+    {{combo-box
+      valueProperty="value"
+      content=calendarOptions
+      value=model.user_option.default_calendar
+      id="user-default-calendar"
+      onChange=(action (mut model.user_option.default_calendar))
+    }}
+  </div>
+{{/if}}
+
 {{plugin-outlet name="user-preferences-profile" args=(hash model=model save=(action "save"))}}
 
 {{plugin-outlet name="user-custom-preferences" args=(hash model=model)}}
