There's no need to pass `filter` to `user-notifications-large`. The component doesn't use it.

--- a/app/assets/javascripts/discourse/app/templates/user/notifications-index.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user/notifications-index.hbs
@@ -21,7 +21,7 @@
   {{#if nothingFound}}
     <div class="alert alert-info">{{i18n "notifications.empty"}}</div>
   {{else}}
-    {{user-notifications-large notifications=model filter=filter}}
+    {{user-notifications-large notifications=model}}
     {{conditional-loading-spinner condition=loading}}
   {{/if}}
 {{/if}}
