Add a background to the alt text that's similar to resizing controls

--- a/app/assets/stylesheets/common/d-editor.scss
+++ b/app/assets/stylesheets/common/d-editor.scss
@@ -212,6 +212,7 @@
 
     .alt-text-readonly-container {
       display: flex;
+      background: var(--secondary);
 
       span {
         margin-right: 0.5em;
