Avoid styling by html elements

--- a/app/assets/stylesheets/common/d-editor.scss
+++ b/app/assets/stylesheets/common/d-editor.scss
@@ -214,7 +214,7 @@
       display: flex;
       background: var(--secondary);
 
-      span {
+      span.alt-text {
         margin-right: 0.5em;
         overflow: hidden;
         white-space: nowrap;
