Show context after a term is entered, add `in` label to categories/tags

--- a/app/assets/stylesheets/common/base/search-menu.scss
+++ b/app/assets/stylesheets/common/base/search-menu.scss
@@ -176,7 +176,7 @@ $search-pad-horizontal: 0.5em;
       margin-right: 5px;
     }
 
-    .search-item-slug .label-suffix {
+    .label-suffix {
       color: var(--primary-medium);
     }
 
