--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -20,7 +20,7 @@
 @import "pick-files-button";
 @import "relative-time-picker";
 @import "share-and-invite-modal";
-@import "download-calendar-modal";
+@import "download-calendar";
 @import "svg";
 @import "tap-tile";
 @import "time-input";
