--- a/app/assets/javascripts/discourse/app/templates/modal/download-calendar.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/download-calendar.hbs
@@ -10,7 +10,7 @@
             selection=selectedCalendar
             onChange=(action (mut selectedCalendar))
           }}
-          {{i18n "download_calendar.ics"}}
+          {{i18n "download_calendar.save_ics"}}
         </label>
       </div>
       <div>
@@ -22,7 +22,7 @@
             selection=selectedCalendar
             onChange=(action (mut selectedCalendar))
           }}
-          {{i18n "download_calendar.google"}}
+          {{i18n "download_calendar.save_google"}}
         </label>
       </div>
     </div>
