--- a/app/assets/stylesheets/mobile/user.scss
+++ b/app/assets/stylesheets/mobile/user.scss
@@ -361,7 +361,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     .user-invite-search {
-      width: 100%
+      width: 100%;
     }
     .user-invite-buttons {
       width: 100%;
