--- a/app/assets/javascripts/discourse/app/templates/components/edit-category-settings.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/edit-category-settings.hbs
@@ -86,7 +86,7 @@
   </section>
 
   {{#if siteSettings.allow_publish_read_state_on_categories}}
-    <section class="field pubish-read-state">
+    <section class="field publish-read-state">
       <label>
         {{input type="checkbox" checked=category.publish_read_state}}
         {{i18n "category.publish_read_state"}}
