--- a/app/assets/javascripts/discourse/app/templates/components/private-message-glyph.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/private-message-glyph.hbs
@@ -1,6 +1,6 @@
 {{#if shouldShow}}
   {{#if href}}
-    <a href={{href}} title={{i18n title}}>
+    <a href={{href}} title={{i18n title}} aria-label={{i18n ariaLabel}}>
       <span class="private-message-glyph-wrapper">
         {{d-icon "envelope" class="private-message-glyph"}}
       </span>
