--- a/app/assets/javascripts/discourse/app/templates/components/time-shortcut-picker.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/time-shortcut-picker.hbs
@@ -2,7 +2,11 @@
   {{#each options as |option|}}
     {{#unless option.hidden}}
       {{#tap-tile icon=option.icon tileId=option.id activeTile=grid.activeTile onChange=(action "selectShortcut")}}
-        <div class="tap-tile-title">{{i18n option.label}}</div>
+        {{#if option.customLabel}}
+          <div class="tap-tile-title">{{i18n option.customLabel}}</div>
+        {{else}}
+          <div class="tap-tile-title">{{i18n option.label}}</div>
+        {{/if}}
         <div class="tap-tile-date">{{option.timeFormatted}}</div>
       {{/tap-tile}}
     {{/unless}}
