DEV: Review fixes

--- a/app/assets/javascripts/discourse/app/templates/components/edit-category-images.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/edit-category-images.hbs
@@ -6,7 +6,7 @@
     onUploadDeleted=(action "logoUploadDeleted")
     type="category_logo"
     class="no-repeat contain-image"
-    id="category-logo-upload"
+    id="category-logo-uploader"
   }}
 </section>
 
@@ -17,6 +17,6 @@
     onUploadDone=(action "backgroundUploadDone")
     onUploadDeleted=(action "backgroundUploadDeleted")
     type="category_background"
-    id="category-background-upload"
+    id="category-background-uploader"
   }}
 </section>
