--- a/app/assets/javascripts/discourse/app/templates/preferences/profile.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/profile.hbs
@@ -50,7 +50,7 @@
         {{uppy-image-uploader
           imageUrl=model.profile_background_upload_url
           type="profile_background"
-          id="profile-background"
+          id="profile-background-uploader"
         }}
       </div>
       <div class="instructions">
@@ -65,7 +65,7 @@
         {{uppy-image-uploader
           imageUrl=model.card_background_upload_url
           type="card_background"
-          id="profile-card-background"
+          id="profile-card-background-uploader"
         }}
       </div>
       <div class="instructions">
