Adjust topic progress position when filtering posts

--- a/app/assets/stylesheets/common/components/footer-nav.scss
+++ b/app/assets/stylesheets/common/components/footer-nav.scss
@@ -20,7 +20,7 @@ body.footer-nav-visible {
   }
   .posts-filtered-notice {
     transition: all linear 0.1s;
-    bottom: $footer-nav-height + 15;
+    bottom: calc(#{$footer-nav-height} + env(safe-area-inset-bottom));
   }
 }
 
