--- a/app/assets/stylesheets/mobile/topic.scss
+++ b/app/assets/stylesheets/mobile/topic.scss
@@ -74,9 +74,6 @@
 
 #topic-progress {
   position: relative;
-  &.hidden {
-    display: none;
-  }
   background-color: var(--secondary);
   color: var(--tertiary);
   border: 1px solid var(--tertiary-low);
@@ -108,7 +105,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    width: 0;
+    width: var(--progress-bg-width, 0);
     background-color: var(--tertiary-low);
     transition: width 0.75s;
   }
