Add requested changes

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -1455,7 +1455,7 @@ a.mention-group {
   }
 }
 
-.fullscreen-table-wrapper:hover {
+html.discourse-no-touch .fullscreen-table-wrapper:hover {
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(var(--always-black-rgb), 0.1),
     0 2px 10px 0 rgba(var(--always-black-rgb), 0.1);
