DEV: Make uploads controller check + handle backup errors

--- a/app/assets/javascripts/admin/addon/templates/backups-index.hbs
+++ b/app/assets/javascripts/admin/addon/templates/backups-index.hbs
@@ -9,7 +9,7 @@
       class="btn-default"}}
   {{else}}
     {{#if enableExperimentalBackupUploader}}
-      {{uppy-backup-uploader done=(route-action "remoteUploadSuccess") type="backup"}}
+      {{uppy-backup-uploader done=(route-action "remoteUploadSuccess")}}
     {{else}}
       {{backup-uploader done=(route-action "remoteUploadSuccess")}}
     {{/if}}
