--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -613,7 +613,8 @@ blockquote {
   box-sizing: border-box;
 }
 
-.topic-area > .loading-container {
+.topic-area > .loading-container,
+.topic-navigation:not(.render-timeline) {
   // loader needs to be same width as posts
   width: calc(
     #{$topic-avatar-width} + #{$topic-body-width} +
