--- a/app/assets/javascripts/discourse/app/templates/components/groups-form-membership-fields.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/groups-form-membership-fields.hbs
@@ -60,20 +60,22 @@
       options=(hash allowAny=true)
     }}
 
-    <label for="automatic_membership_associated_groups">
-      {{i18n "admin.groups.manage.membership.automatic_membership_associated_groups"}}
-    </label>
+    {{#if showAssociatedGroups}}
+      <label for="automatic_membership_associated_groups">
+        {{i18n "admin.groups.manage.membership.automatic_membership_associated_groups"}}
+      </label>
 
-    {{list-setting
-      name="automatic_membership_associated_groups"
-      class="group-form-automatic-membership-associated-groups"
-      value=model.associatedGroupIds
-      choices=associatedGroups
-      settingName="name"
-      nameProperty="label"
-      valueProperty="id"
-      onChange=(action (mut model.associated_group_ids))
-    }}
+      {{list-setting
+        name="automatic_membership_associated_groups"
+        class="group-form-automatic-membership-associated-groups"
+        value=model.associatedGroupIds
+        choices=associatedGroups
+        settingName="name"
+        nameProperty="label"
+        valueProperty="id"
+        onChange=(action (mut model.associated_group_ids))
+      }}
+    {{/if}}
   </div>
 
   {{plugin-outlet name="groups-form-membership-below-automatic"
